fix: bridge usa programs slider | text alignment in index page | j1 cares page email update

--- a/public/assets_v3/css/custom.css
+++ b/public/assets_v3/css/custom.css
@@ -181,7 +181,7 @@
     font-family: 'Outfit';
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 425px) {
     .hero-button {
         width: 100%;
     }
